<resources>
    <string name="app_name">Roseroomlove</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">ご入会ありがとうございます。</string>
    <string name="user_id">会員 ID:</string>
    <string name="sub_title">解除パスワード</string>
    <string name="register">登録する</string>
    <string name="enter_code">コード入力</string>

    <color name="red_color">#ff0000</color>
    <color name="white_color">#ffffff</color>
    <color name="blue_color">#1569C7</color>
</resources>
